[gd_scene load_steps=3 format=3 uid="uid://dwuji6cv1kqcf"]

[ext_resource type="Script" uid="uid://s08pio8docya" path="res://Scripts/TableScene/bet_manager.gd" id="1_4spt8"]
[ext_resource type="Script" uid="uid://ck87c6ecbimix" path="res://Scripts/Classes/button_with_sfx.gd" id="2_l2x8t"]

[node name="BetManager" type="Control" node_paths=PackedStringArray("confirm_bet", "min_bet_button", "lower_bet_button", "increase_bet_button", "max_bet_button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_4spt8")
confirm_bet = NodePath("BetButton")
min_bet_button = NodePath("MinBetButton")
lower_bet_button = NodePath("DecreaseBetButton")
increase_bet_button = NodePath("IncreaseBetButton")
max_bet_button = NodePath("MaxBetButton")
metadata/_edit_lock_ = true

[node name="BetButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.432292
anchor_top = 0.889815
anchor_right = 0.539583
anchor_bottom = 0.953704
theme_override_font_sizes/font_size = 24
text = "10"
script = ExtResource("2_l2x8t")
metadata/_custom_type_script = "uid://ck87c6ecbimix"
metadata/_edit_use_anchors_ = true

[node name="IncreaseBetButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.551042
anchor_top = 0.889815
anchor_right = 0.570833
anchor_bottom = 0.953704
theme_override_font_sizes/font_size = 24
text = ">"
script = ExtResource("2_l2x8t")
metadata/_custom_type_script = "uid://ck87c6ecbimix"
metadata/_edit_use_anchors_ = true

[node name="DecreaseBetButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.403125
anchor_top = 0.892593
anchor_right = 0.422917
anchor_bottom = 0.956481
theme_override_font_sizes/font_size = 24
text = "<
"
script = ExtResource("2_l2x8t")
metadata/_custom_type_script = "uid://ck87c6ecbimix"
metadata/_edit_use_anchors_ = true

[node name="MaxBetButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.579167
anchor_top = 0.889815
anchor_right = 0.598958
anchor_bottom = 0.953704
theme_override_font_sizes/font_size = 24
text = ">>"
script = ExtResource("2_l2x8t")
metadata/_custom_type_script = "uid://ck87c6ecbimix"
metadata/_edit_use_anchors_ = true

[node name="MinBetButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.375
anchor_top = 0.892593
anchor_right = 0.394792
anchor_bottom = 0.956481
theme_override_font_sizes/font_size = 24
text = "<<
"
script = ExtResource("2_l2x8t")
metadata/_custom_type_script = "uid://ck87c6ecbimix"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="BetButton" to="." method="_on_bet_button_pressed"]
[connection signal="pressed" from="IncreaseBetButton" to="." method="_on_increase_bet_button_pressed"]
[connection signal="pressed" from="DecreaseBetButton" to="." method="_on_decrease_bet_button_pressed"]
[connection signal="pressed" from="MaxBetButton" to="." method="_on_max_bet_button_pressed"]
[connection signal="pressed" from="MinBetButton" to="." method="_on_min_bet_button_pressed"]
